--- a/Chap9_seq_containers.ipynb
+++ b/Chap9_seq_containers.ipynb
@@ -16,11 +16,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ { \"Hello\", \"this\", \"is\", \"a\", \"test\" }, { \"This\", \"is\", \"another\", \"string\" }, { \"This\", \"is\", \"the\", \"last\", \"string\" } }"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "#include <vector>\n",
+    "#include <deque>\n",
+    "#include <list>\n",
+    "\n",
+    "vector<vector<string>> lines;\n",
+    "vector<string> line1 {\"Hello\", \"this\", \"is\", \"a\", \"test\"};\n",
+    "vector<string> line2 {\"This\",\"is\",\"another\",\"string\"};\n",
+    "vector<string> line3 {\"This\",\"is\",\"the\",\"last\",\"string\"};\n",
+    "\n",
+    "lines.push_back(line1);\n",
+    "lines.push_back(line2);\n",
+    "lines.push_back(line3);\n",
+    "\n",
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "//assue no Default is a type without a default constructor\n",
+    "\n",
+    "\n",
+    "vector<int> v1 (10, 'h');\n",
+    "v1;\n",
+    "sizeof(v1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ex 9.2  done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ { 104, 104, 104, 104, 104, 104, 104, 104, 104, 104 } }"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deque<int> v1 (10,'h');\n",
+    "list<deque<int>> v2;\n",
+    "v2.push_back(v1);\n",
+    "v2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "text/x-c++src",
+   "file_extension": ".cpp",
+   "mimetype": "text/x-c++src",
+   "name": "c++",
+   "version": "14"
   },
   "orig_nbformat": 4
  },
