--- a/Chap9_seq_containers.ipynb
+++ b/Chap9_seq_containers.ipynb
@@ -116,10 +116,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/*\n",
+    "while (begin != end)\n",
+    "{\n",
+    "    *begin = val;\n",
+    "    ++begin;\n",
+    "}\n",
+    "*/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "//Ex9.4\n",
+    "\n",
+    "bool foundnfound(vector<int>::iterator begin, vector<int>::iterator end, int value){\n",
+    "    for (vector<int>::iterator it = begin; it!= end; ++it){\n",
+    "        if(*it == value){\n",
+    "            return true;\n",
+    "        }\n",
+    "    }\n",
+    "    return false;\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_141:3:32: error: no matching constructor for initialization of 'vector<int>::iterator' (aka '__normal_iterator<int *, std::vector<int, std::allocator<int> > >')\n",
+      "    for (vector<int>::iterator it = begin; it!= end; ++it){\n",
+      "                               ^    ~~~~~\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "//Ex9.5\n",
+    "\n",
+    "bool foundnfound(vector<int>::iterator begin, vector<int>::iterator end, int value){\n",
+    "    for (vector<int>::iterator it = begin; it!= end; ++it){\n",
+    "        if(*it == value){\n",
+    "            return &it;\n",
+    "        }\n",
+    "    }\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "|"
+   ]
   }
  ],
  "metadata": {
