--- a/Chap9_seq_containers.ipynb
+++ b/Chap9_seq_containers.ipynb
@@ -150,38 +150,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "input_line_141:3:32: error: no matching constructor for initialization of 'vector<int>::iterator' (aka '__normal_iterator<int *, std::vector<int, std::allocator<int> > >')\n",
-      "    for (vector<int>::iterator it = begin; it!= end; ++it){\n",
-      "                               ^    ~~~~~\n"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "//Ex9.5\n",
     "\n",
-    "bool foundnfound(vector<int>::iterator begin, vector<int>::iterator end, int value){\n",
-    "    for (vector<int>::iterator it = begin; it!= end; ++it){\n",
-    "        if(*it == value){\n",
-    "            return &it;\n",
-    "        }\n",
-    "    }\n",
-    "    return false;\n",
-    "}"
+    "/* Done in a programming format */"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Ex9.6\n",
+    "list<int> lst1;\n",
+    "list<int>::iterator iter1 = lst1.begin(), iter2 = lst1.end();\n",
+    "\n",
+    "lst1.push_back(1);\n",
+    "lst1.push_back(3);\n",
+    "\n",
+    "while (*iter1<*iter2)\n",
+    "{\n",
+    "    break;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "//iter1 and iter2 refers to the pointer to the begin and end elements. It is unworthy to compare two different  memory adderesses hence we should compare their values instead;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Container Type Members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector<int>::difference_type count;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Ex9.8\n",
+    "\n",
+    "list<string> v1 {\"Well\",\"this\",\"is\",\"another\",\"test\"};\n",
+    "list<string>::iterator a1=v1.begin()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Different types of iterators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include<iostream>\n",
+    "#include<string>\n",
+    "#include<list>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list<string> a {\"milton\", \"shakespeare\",\"Austen\"};\n",
+    "auto it1 = a.begin();\n",
+    "*it1;\n",
+    "auto it2 = a.crbegin();\n",
+    "//*it2 = \"Shelley\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//ex9.9\n",
+    "/* begin is the pointer to the first element of a sequential container, we can assign value to that pointer and change the value in the sequential container, However cbegin makes the pointer constant and that value cannot be changed*/"
    ]
   },
   {
@@ -189,9 +267,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "|"
-   ]
+   "source": []
   }
  ],
  "metadata": {
