--- a/Chap9_seq_containers.ipynb
+++ b/Chap9_seq_containers.ipynb
@@ -264,6 +264,611 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Excercise 9.10\n",
+    "\n",
+    "\n",
+    "\n",
+    "# include<iostream>\n",
+    "# include<vector>\n",
+    "# include<string>\n",
+    "# include<typeinfo>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "\n",
+    "vector<int> v1;\n",
+    "\n",
+    "const vector<int> v2;\n",
+    "auto it1 = v1.begin();\n",
+    "auto it2 = v2.cbegin();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"St6vectorIiSaIiEE\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeid(v2).name() ///vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"N9__gnu_cxx17__normal_iteratorIPiSt6vectorIiSaIiEEEE\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeid(it1).name()  //iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"N9__gnu_cxx17__normal_iteratorIPKiSt6vectorIiSaIiEEEE\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeid(it2).name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto it3 = v1.cbegin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"N9__gnu_cxx17__normal_iteratorIPKiSt6vectorIiSaIiEEEE\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeid(it3).name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Every container type defines a default constructor with the exception of array, the default constructor creates an empty container fo the specified type. Again excepting array, the other constructors take arguments that specify the size of the container and initial values for the elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "In file included from input_line_5:1:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/xeus/xinterpreter.hpp:17:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/xeus/xcomm.hpp:14:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/list:65:\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/bits/stl_list.h:837:36: error: no member named 'begin' in 'std::initializer_list<std::__cxx11::basic_string<char> >'\n",
+      "      { _M_initialize_dispatch(__l.begin(), __l.end(), __false_type()); }\n",
+      "                               ~~~ ^\n",
+      "input_line_43:2:26: note: in instantiation of member function 'std::__cxx11::list<std::__cxx11::basic_string<char>, std::allocator<std::__cxx11::basic_string<char> > >::list' requested here\n",
+      " list<string> authors  = {\"milton\",\"shakespeare\",\"austen\"};\n",
+      "                         ^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "list<string> authors  = {\"milton\",\"shakespeare\",\"austen\"};\n",
+    "vector<const char*> articles = {\"a\", \"an\", \"the\"};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sequential Container Size Related Constructors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector<int> ivec(10, -1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list<string> svec(10, \"hi\");\n",
+    "forward_list<int> ivec(10);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_13:3:1: warning: declaration does not declare anything [-Wmissing-declarations]\n",
+      "array<int, 42> // type is: array that holds 42 ints\n",
+      "^~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Just as the size of a built in array is part of its type, the size of a library array is part of its type. When we define an array, in addition to specifying the element type we also specify the container size:\n",
+    "\n",
+    "\n",
+    "array<int, 42> // type is: array that holds 42 ints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array<int, 10>::size_type i; // array type includes element type and size\n",
+    "array<int, 10> ia2 = {0,1,2,3,4,5,6,7,8,9}; //list initialization\n",
+    "array<int, 10> ia3 = {42};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// it is worth noting that although we cannot copy or assign objects of built in array types there is no such restriction on array\n",
+    "\n",
+    "int digs[10] = {0,1,2,3,4,5,6,7,8,9};\n",
+    "//int cpy[10] = digs;   //error: no copy or assignment for built in arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array<int, 10> digits = {0,1,2,3,4,5,6,7,8,9};\n",
+    "array<int, 10> copy = digits;//so long as array types match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_69:11:21: error: expression is not assignable\n",
+      "for (int i=1; i<=5; +++i){\n",
+      "                    ^ ~~\n",
+      "input_line_69:12:8: error: no member named 'push_back' in 'std::vector<int, std::allocator<int> >'\n",
+      "    v6.push_back(i);\n",
+      "    ~~ ^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "//ex9.2.4\n",
+    "//ex9.11\n",
+    "\n",
+    "vector<int> v1={1,2};//1\n",
+    "vector<int> v2(10,1);//2\n",
+    "vector<int> v3 = v2;//2\n",
+    "vector<int> v4;//3\n",
+    "\n",
+    "\n",
+    "int arr[] = {1,2,3,4,5};//4\n",
+    "vector<int> v5(arr, arr+sizeof(arr)/sizeof(arr[0]));//5\n",
+    "\n",
+    "vector<int> v6;\n",
+    "for (int i=1; i<=5; +++i){\n",
+    "    v6.push_back(i);\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sizeof(arr)/sizeof(arr[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 2, 3, 4, 5 }"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "*v1.begin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "*v2.end()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 }"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 2, 1, 1, 1, 1, 1, 1, 1, 1 }"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v3[1] = 2;\n",
+    "v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 }"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Using the std::vector::assign() method\n",
+    "\n",
+    "std::vector<int> v7;\n",
+    "v7.assign(5, 10);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment and swap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list<string> slist(1);\n",
+    "slist.assign(10,\"hiya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ \"hiya\", \"hiya\", \"hiya\", \"hiya\", \"hiya\", \"hiya\", \"hiya\", \"hiya\", \"hiya\", \"hiya\" }"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using swap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// The swap operation exchanges the contents of two containers of the same type. After the call to swap, the elements in the two containers are interchanged:\n",
+    "vector<string> svec1(10); //vector with 10 elements\n",
+    "vector<string> svec2(24); //vector with 24 elements\n",
+    "\n",
+    "\n",
+    "swap(svec1, svec2);  //swaps the elements provided they are of the same type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\" }"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svec2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector<string> vec;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char* lis[] = {\"these\",\"are\",\"the\",\"elements\",\"of\",\"the\",\"list\"};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_109:2:2: error: no matching function for call to 'begin'\n",
+      " begin(lis)\n",
+      " ^~~~~\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/initializer_list:88:5: note: candidate template ignored: could not match 'initializer_list' against 'list'\n",
+      "    begin(initializer_list<_Tp> __ils) noexcept\n",
+      "    ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/bits/range_access.h:52:5: note: candidate template ignored: substitution failure [with _Container = std::__cxx11::list<const char *, std::allocator<const char *> >]: no member named 'begin' in 'std::__cxx11::list<const char *, std::allocator<const char *> >'\n",
+      "    begin(_Container& __cont) -> decltype(__cont.begin())\n",
+      "    ^                                            ~~~~~\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/bits/range_access.h:63:5: note: candidate template ignored: substitution failure [with _Container = std::__cxx11::list<const char *, std::allocator<const char *> >]: no member named 'begin' in 'std::__cxx11::list<const char *, std::allocator<const char *> >'\n",
+      "    begin(const _Container& __cont) -> decltype(__cont.begin())\n",
+      "    ^                                                  ~~~~~\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/bits/range_access.h:95:5: note: candidate template ignored: could not match '_Tp [_Nm]' against 'list<const char *>'\n",
+      "    begin(_Tp (&__arr)[_Nm]) noexcept\n",
+      "    ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/valarray:1221:5: note: candidate template ignored: could not match 'valarray' against 'list'\n",
+      "    begin(valarray<_Tp>& __va) noexcept\n",
+      "    ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/13.2.0/valarray:1232:5: note: candidate template ignored: could not match 'valarray' against 'list'\n",
+      "    begin(const valarray<_Tp>& __va) noexcept\n",
+      "    ^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "begin(lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -272,16 +877,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++14",
-   "language": "C++14",
-   "name": "xcpp14"
+   "display_name": "C++11",
+   "language": "C++11",
+   "name": "xcpp11"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
    "name": "c++",
-   "version": "14"
+   "version": "11"
   },
   "orig_nbformat": 4
  },
